# lingofi

./: README.md
app/: app.json  package-lock.json  package.json
lingofi-chat/: next.config.mjs  package-lock.json  package.json
lingofi-mech/: README.md  app.py  dummy_tool.py  gemini.py  index.py  prepare_tx.py  pyproject.toml  test_mech_tool.py
lingofi-mech/lingofi_tx/: README.md  __init__.py  component.yaml  lingofi_tx.py  test_lingofi_tx.py
lingofi-mech/tests/: test_mech_tool.py
lingofi-seed/: README.md  package-lock.json  package.json
lingofi-server/: .env.sample  chat.js  db.js  index.js  package-lock.json  package.json  send.js  string.js  verified.js
lingofi-server/data/: wallets.json
lingofi-server/models/: string.js  user.js  wallet.js
lingofi-server/routes/: auth.js  claimTokenReward.js  getGas.js  getGasReward.js  getString.js  getStringInfo.js  getTokenReward.js  passwordReset.js  rewarded.js  string.js  users.js  usersList.js  walletKey.js
lingofi-server/templates/: confirm-email.js  password-reset.js
lingofi-server/utils/: Chain.js  GasTransaction.js  TokenTransaction.js  createRandomWallet.js  gemini.js  getAddress.js  getTokenAddress.js  gpt.js  sendEmail.js
lingofi-string/: .env  .env.sample  next.config.js  package-lock.json  package.json  tailwind.config.js
lingofi-string/components/: Layout.tsx
lingofi-string/handler/: fetchStringInfo.ts
lingofi-string/pages/: [token].tsx
react-app/: package.json
react-app/pages/: _app.tsx
server/: package-lock.json  package.json
string/: README.md  package-lock.json  package.json
(+33 files in other folders)
